tests/parsing/smtlib/v2.7/errors/121_sort_list_unclosed_1.smt2
(set-logic ALL)
(declare-const foo (array int _))
